Some more of Lui's feedback

--- a/chap-introduction.tex
+++ b/chap-introduction.tex
@@ -11,9 +11,9 @@ Some of these phenomena are direct and indirect lighting and shadowing, large-sc
 
 Of particular importance for realistic light simulation is large-scale and indirect lighting, which is often called ``global illumination''. For instance, in indoor scenes where the sun shining through windows is the only light source, most parts of the scene receive light only indirectly and after multiple reflections. Without global illumination, those areas would receive no light at all and appear completely black. Thus, physically correct or at least plausible global illumination is of high importance for the film industry, video game creators, architectural and e-commerce visualizations and many more.
 
-Unfortunately, large-scale and indirect lighting is inherently expensive to compute since the light needs to be transported over long distances, in arbitrary directions and with multiple reflections. In offline rendering systems as they are used by, e.\,g., the film industry, the available computation time and power makes this less of a problem than it is for real-time applications. Here, compromises have been made, such as long precomputation times, disallowing geometry and/or light movement, and only simulating diffuse and not specular reflections, to mimic at least some of the effects of global illumination.
+Unfortunately, large-scale and indirect lighting is inherently expensive to compute since the light needs to be transported over long distances, in arbitrary directions and with multiple reflections. In offline rendering systems as they are used by, for example, the film industry, the available computation time and power makes this less of a problem than it is for real-time applications. Here, compromises have been made, such as long precomputation times, disallowing geometry and/or light movement, and only simulating diffuse and not specular reflections, to mimic at least some of the effects of global illumination.
 
-Being both important for realism and expensive to compute, global illumination has become a particularly large research area and has generated a lot of different approaches for simulating or approximating it, each with different application areas, advantages and disadvantages. One of these approaches is instant radiosity \citep{Keller:1997:InstantRadiosity}, also called many-light methods, a well-known family of algorithms that scale from real-time applications to offline rendering. They use a rather intuitive model to approximate lighting and can be used to simulate other lighting effects besides global illumination as well.
+Being both important for high-quality renderings and expensive to compute, global illumination has become a particularly large research area and has generated a lot of different approaches for simulating or approximating it, each with different application areas, advantages and disadvantages. One of these approaches is instant radiosity \citep{Keller:1997:InstantRadiosity}, also called many-light methods, a well-known family of algorithms that scale from real-time applications to offline rendering. They use a rather intuitive model to approximate lighting and can be used to simulate other lighting effects besides global illumination as well.
 
 In this thesis, we present an implementation of a rendering system using the many-light approach to simulate global illumination. The system uses no precomputation and needs only several milliseconds for its computations, making it suitable for real-time applications. For indirect shadowing, the software renders several hundred imperfect shadow maps \citep{ritschel2008ism} each frame. Our main contributions are:
 \begin{itemize}
