--- a/foo-thesis.tex
+++ b/foo-thesis.tex
@@ -142,9 +142,19 @@
 
 \todo[inline]{nicer, less structure-in-your-face introduction in \Cref{sec:intro:gi:components}, in order to ... it is necessary to have an understanding of...}
 
-\todo[inline][more conclusion by adding summaries of the approaches, how did we come to these conclusions, we've been able to show...]
+\todo[inline]{more conclusion by adding summaries of the approaches, how did we come to these conclusions, we've been able to show...}
 
-\todo[inline] {some closing remarks. add some personal evaluations, broad statement about complexity}
+\todo[inline]{acknowledgements}
+
+\todo[inline]{abstract and zusammenfassung}
+
+\todo[inline]{Lui: summaries at the end of chapters}
+
+\todo[inline]{Lui: replace "this chapter will ..." by introductory sentences from first section}
+
+\todo[inline]{Lui: more references on first few pages}
+
+\todo[inline]{some closing remarks. add some personal evaluations, broad statement about complexity}
 
 \todo[inline]{at least two subsections per section. Tiled Shading is left}
 
@@ -192,6 +202,7 @@
 \todo[inline]{latex warnings}
 \todo[inline]{esp. overflows}
 \todo[inline]{orphans and widows, also single words on a line}
+\todo[inline]{spell checking}
 
 
 % \include{chap-examples}
