Remove last remaining single subsection

--- a/chap-concept.tex
+++ b/chap-concept.tex
@@ -189,7 +189,7 @@ Since the input and output pixel's location do not match the way they do during 
 
 
 
-\section{Clustered Deferred Shading}
+\section{Clustered and Tiled Deferred Shading}
 \label{sec:concept:clusteredShading}
 
 In real-time graphics applications, primarily video games, a technique called \textit{clustered shading} \citep{olsson2012clustered}, has seen increased usage. Its goal is to increase the efficiency of lighting a scene with multiple light sources.
