--- a/chap-results.tex
+++ b/chap-results.tex
@@ -388,7 +388,7 @@ Going further, this technique is limited by how well the blur phase will be able
 
 
 
-\section{Clustered Deferred Shading}
+\section{Clustered and Tiled Deferred Shading}
 \label{sec:results:clusteredShading}
 
 Clustered deferred shading and tiled deferred shading reduce the number of light calculation operations by clustering fragments and culling lights against those clusters. As such, if implemented correctly, they do not affect quality at all, but are purely performance optimizations.
